(init)[PCF-28][PCF-27] first layout fix, chat overflow fix

--- a/src/custom.css
+++ b/src/custom.css
@@ -1,3 +1,41 @@
+.unauthenticated .pace-layout-managers__container,
+.unauthenticated .pace-controls-container,
+.unauthenticated .pace-layout-manager {
+  width: 100%;
+  height: 100%;
+  max-width: 640px;
+  max-height: 360px;
+  margin: auto;
+}
+
+.unauthenticated .pace-layout-managers__container {
+  border-radius: 0.5rem;
+  overflow: hidden;
+}
+
+@media (min-width: 640px) {
+  .unauthenticated body {
+    display: flex;
+  }
+  .unauthenticated .pace-layout-managers__container {
+    margin-left: 5rem;
+    margin-right: 5rem;
+  }
+}
+
+.unauthenticated .pace-channel-information {
+  background: #fff;
+  position: relative;
+  left: unset;
+  top: unset;
+  transform: unset;
+  height: unset;
+}
+
+.unauthenticated .pace-channel-information h1 {
+  color: #111;
+}
+
 .pace-layout-managers__container {
   background: #111;
   padding: 0;
@@ -7,6 +45,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  position: relative;
 }
 
 .pace-layout-managers__container.pace-layout-managers__container--connected {
